BGE: Crashes with several files since bullet update https://developer.blender.org/rBb64d5809e7e3b832e2a011869db68e70b4b4e6fc #47293

Closed
opened 2016-02-01 17:12:28 +01:00 by Ulysse Martin · 7 comments

System Information
Windows 10 64 bits GTX 970

Blender Version
Broken: https://developer.blender.org/rBb64d5809e7e3b832e2a011869db68e70b4b4e6fc
Worked: previous commit: https://developer.blender.org/rB3c72e302e1eb25de43dd9d077f0c730cc02b5674

Short description of error
Crash on some files with Blender 32 bits release on Windows.

Exact steps for others to reproduce the error

  • Run Windows (tested on Windows 10 64 bits)

  • Blender 32 bits (tested with the last buildbot and git bisect to find the first bad commit. The bug doesn't occur in 64 bits)

  • Release mode (The bug doesn't occur in Debug mode (another bug occurs when opening some files in Debug mode (I commented \extern\Eigen3\Eigen\src\Core\DenseStorage.h: ln 86 //EIGEN_MAKE_UNALIGNED_ARRAY_ASSERT(0xf); to avoid this other bug))

  • Open the file and press P

    • Crash

Files tested which crashed

The simpler tested file for the moment is Martinsh water demo v1.1.

Other comments
It's hard to debug because it happens only in release mode so the Visual Studio debugger can't help. I tried to run the file with blender.exe --debug but I don't know if the informations are relevant (maybe).

**System Information** Windows 10 64 bits GTX 970 **Blender Version** Broken: https://developer.blender.org/rBb64d5809e7e3b832e2a011869db68e70b4b4e6fc Worked: previous commit: https://developer.blender.org/rB3c72e302e1eb25de43dd9d077f0c730cc02b5674 **Short description of error** Crash on some files with Blender 32 bits release on Windows. **Exact steps for others to reproduce the error** - Run Windows (tested on Windows 10 64 bits) - Blender 32 bits (tested with the last buildbot and git bisect to find the first bad commit. The bug doesn't occur in 64 bits) - Release mode (The bug doesn't occur in Debug mode (another bug occurs when opening some files in Debug mode (I commented \extern\Eigen3\Eigen\src\Core\DenseStorage.h: ln 86 //EIGEN_MAKE_UNALIGNED_ARRAY_ASSERT(0xf); to avoid this other bug)) - Open the file and press P - >Crash **Files tested which crashed** - Water demo by Martinsh v0.99 and v1.1: http://blenderartists.org/forum/showthread.php?242940-unlimited-planar-reflections-amp-refraction-(update)&highlight=water+shader+martinsh - Sintel levels (desert and docks): http://sintelgame.org/downloads/ (in lib/levels) The simpler tested file for the moment is Martinsh water demo v1.1. **Other comments** It's hard to debug because it happens only in release mode so the Visual Studio debugger can't help. I tried to run the file with blender.exe --debug but I don't know if the informations are relevant (maybe).
Author

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by Ulysse Martin 2016-02-01 17:12:28 +01:00
Author

Added subscriber: @you.le

Added subscriber: @you.le

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm the crash with a RelWithDebInfo build, so I should be able to debug this.

I can confirm the crash with a RelWithDebInfo build, so I should be able to debug this.

This issue was referenced by fae710a213

This issue was referenced by fae710a2131f874da46b3a55ddb7da6884a47acb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

I confirm the bug has gone. Thanks very much Brecht!

I confirm the bug has gone. Thanks very much Brecht!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47293
No description provided.