Fix T47293: game engine crashes since Bullet upgrade.

This restores a modification that was there before.