extern/bullet2/src/LinearMath/btScalar.h
@@ -179,7 +179,7 @@ inline int	btGetVersion()
 		#define BT_USE_SSE
 		//BT_USE_SSE_IN_API is enabled on Mac OSX by default, because memory is automatically aligned on 16-byte boundaries
 		//if apps run into issues, we will disable the next line
-		#define BT_USE_SSE_IN_API
+		//#define BT_USE_SSE_IN_API
         #ifdef BT_USE_SSE
             // include appropriate SSE level
             #if defined (__SSE4_1__)
